# insight-blueprint-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/docs/research/: review-architecture-analysis-notebook.md  review-architecture-epic09.md  review-docs-analysis-notebook.md  review-docs-epic09.md  review-quality-analysis-notebook.md  review-quality-epic09.md  review-security-analysis-notebook.md  review-security-epic09.md  review-test-analysis-notebook.md  review-test-epic09.md
.claude/hooks/: validate-design.py
.claude/rules/: adr-template.md  design-doc-template.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
.insight/: config.example.yaml
.insight/rules/: package_allowlist.yaml
.spec-workflow/steering/: tech.md
docs/: ARCHITECTURE.md  PRD.md  RELEASE.md
docs/adr/: 0001-drop-mcp-server-embed-validation.md  0002-trunk-based-epic-stacking.md  0003-skill-yaml-io-via-design-io.md  0004-open-string-catalog-taxonomy.md  0005-selective-autonomous-chaining.md  0006-plugin-execution-model.md  0007-upstream-judgment-gates.md  0008-notebook-figure-manifest.md  README.md
docs/design/: epic-01-remove-webui.md  epic-02-validate-lib.md  epic-03-skills-yaml-io.md  epic-04-remove-mcp-server.md  epic-05a-premortem-standalone.md  epic-05b-knowledge-extraction.md  epic-05c-catalog-flexibility.md  epic-06-analysis-review.md  epic-07-analysis-notebook.md  epic-08-analysis-auto.md  epic-09-installable-plugin.md  epic-10-analysis-report.md  epic-3.5-remaining-yaml-io.md
frontend/: package-lock.json  package.json
hooks/: hooks.json  validate-design.py
scripts/: verify_wheel.py
skills/_shared/: catalog_io.py  config_loader.py  design_io.py  models.py
skills/analysis-auto/: SKILL.md
skills/analysis-design/: SKILL.md
skills/analysis-framing/: SKILL.md
skills/analysis-journal/: SKILL.md
skills/analysis-notebook/: SKILL.md
skills/analysis-notebook/references/: notebook-contract.md
skills/analysis-reflection/: SKILL.md
skills/analysis-report/: SKILL.md
skills/analysis-report/references/: apa-template.md
skills/analysis-review/: SKILL.md
skills/analysis-revision/: SKILL.md
skills/catalog-register/: SKILL.md
skills/data-lineage/: SKILL.md
skills/knowledge-extract/: SKILL.md
skills/premortem/: SKILL.md  cli.py
skills/premortem/lib/: risk_evaluator.py
skills/rq-problematization/: SKILL.md
skills/rq-problematization/evals/: evals.json
skills/rq-problematization/references/: alvesson-framework.md  davis-interestingness.md  output-template.md
src/insight_blueprint/: __init__.py  cli.py  validate.py
src/insight_blueprint/_templates/: CLAUDE.md.template
src/insight_blueprint/core/: reviews.py
src/insight_blueprint/models/: __init__.py  catalog.py
tests/: test_catalog_io.py  test_catalog_models.py  test_cli.py  test_design_backward_compat.py  test_design_io.py  test_packaging.py  test_plugin_structure.py  test_reviews.py  test_validate.py  test_validate_hook.py  test_verify_wheel.py  test_version.py
tests/batch_harness/: test_premortem_config.py  test_risk_evaluator.py
tests/integration/: conftest.py  test_analysis_notebook_contract.py  test_bin_wrappers.py  test_crash_recovery.py  test_premortem_cli.py  test_premortem_report.py
tests/integration/fixtures/: sample_notebook.py
tests/skills/: test_analysis_report_structure.py  test_skill_structure.py
